...
    let textFieldName = FormTextField()
    let labelIngredients = UILabel()
    let stackViewGroupedAddTextFieldIngredient = GroupedAddTextFieldStackView(placeholder: "Ingredient")
    let labelSteps = UILabel()
    let stackViewGroupedAddTextFieldStep = GroupedAddTextFieldStackView(placeholder: "Step")
    let pickerViewRecipeType = UIPickerView()
    let buttonAdd = UIButton(type: .contactAdd)

    let modelData = ModelData()
    lazy var recipeTypes: [String] = {
        modelData.modelRecipeTypes.category
    }()
    
...
        stackViewContainer.alignment = .fill
        stackViewContainer.distribution = .fill
        stackViewContainer.spacing = margin

        imageViewRecipe.contentMode = .scaleAspectFit

        labelName.text = "Recipe Name"
        
        var validation = Validation()
        validation.minimumLength = 1
        textFieldName.placeholder = "Recipe Name"
        textFieldName.borderStyle = .roundedRect
        textFieldName.inputValidator = InputValidator(validation: validation)
...
